# hexapod

./: README.md
build_isolated/: catkin_make_isolated.cache
build_isolated/hexapod_pkg/: CMakeCache.txt
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: crab_body_kinematics.pc  crab_description.pc  crab_imu.pc  crab_maestro_controller.pc  crab_msgs.pc  hexapod.pc  hexapod_pkg.pc  pysdf.pc
devel/share/crab_body_kinematics/cmake/: crab_body_kinematicsConfig.cmake
devel/share/crab_description/cmake/: crab_descriptionConfig.cmake
devel/share/crab_imu/cmake/: crab_imuConfig.cmake
devel/share/crab_maestro_controller/cmake/: crab_maestro_controllerConfig.cmake
devel/share/crab_msgs/cmake/: crab_msgs-msg-paths.cmake  crab_msgsConfig.cmake
devel_isolated/hexapod_pkg/: .catkin
src/hexapod/config/: joint_names_hexapod.yaml
src/hexapod/meshes/: base_link.STL  leg_0_2.STL  leg_0_3.STL  leg_1_1.STL  leg_1_3.STL  leg_2_1.STL  leg_2_2.STL  leg_2_3.STL  leg_3_1.STL  leg_3_2.STL  leg_3_3.STL  leg_4_1.STL  leg_4_2.STL  leg_4_3.STL  leg_5_2.STL  leg_5_3.STL
src/hexapod/urdf/: hexapod.csv  hexapod.gazebo  hexapod.urdf  hexapod.xacro
src/hexapod/worlds/: pigot.world
src/hexapod_pkg/: CMakeLists.txt
src/hexapod_pkg/config/: hexapod.yaml
src/hexapod_pkg/launch/: control.launch  spawn.launch
src/hexapod_pkg/scripts/: IK.py  body_leyboard.py  gait.py  init.py  move_keyboard.py  pub.py
src/hexapod_pkg/src/: pexod_plugin.cc
tex/: body_IK.png~  framework.png~  gait.png~  report.aux  report.fdb_latexmk  report.fls  report.tex  traj.png~
(+4 files in other folders)
